# format-galaxy

./: .gitignore  Cargo.toml  collect_plugins.py
clients/test-client/: Cargo.toml  test_client.rs
clients/wasm/: wasm.rs
converters/: Cargo.toml
converters/bson/: Cargo.toml  bson.rs
converters/byte-sequence/: Cargo.toml  byte_sequence.rs
converters/json-like/: Cargo.toml  json_like.rs
converters/json-like/json-like/: Cargo.toml  json_like.rs
converters/json-like/json-like-indent/: Cargo.toml  json_like_indent.rs
converters/json-like/value/: Cargo.toml  value.rs
converters/test-client/: Cargo.toml  test_client.rs
converters/wasm/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
crates/fg-index/: Cargo.toml  index.rs
crates/fg-plugin/: Cargo.toml  plugin.rs
docs/: FileContainerFormat.md  format_galaxy_draft.odp
fg-index/: test_index.json
host/: Cargo.toml
host/src/: edit.rs  fgcat.rs  fgedit.rs  gcat.rs  index.rs  lib.rs  select.rs
src/: main.rs
web-host/: Cargo.toml  README.md  index.html  main.js
web-host/src/: app.rs  lib.rs  main.rs  plugin.rs
