[package]
name = "format-galaxy-host"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[[bin]]
name = "gcat"
path = "src/gcat.rs"

[[bin]]
name = "edit"
path = "src/edit.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# format-galaxy-core = { path = "../core" }
fg-index = { path = "../crates/fg-index" }
fg-plugin = { path = "../crates/fg-plugin" }
wasmtime = "0.21.0"
anyhow = "1.0"
blake3 = "0.3.7"
serde = "1.0"
serde_json = "1.0"
multihash = { version="0.13.0", features=["default", "serde-codec"] }
sha2 = "0.9.2"
