[package]
name = "format-galaxy-host"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2021"

[[bin]]
name = "fg-cat"
path = "src/fgcat.rs"

[[bin]]
name = "fg-edit"
path = "src/fgedit.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# format-galaxy-core = { path = "../core" }
fg-index = { path = "../crates/fg-index" }
fg-plugin = { path = "../crates/fg-plugin" }
wasmtime = "0.36.0"
anyhow = "1.0"
blake3 = "1.3.0"
serde = "1.0"
serde_json = "1.0"
multihash = { version="0.16.0", features=["default", "serde-codec"] }
sha2 = "0.10.0"
terminal-menu = "2.0.0"
