[package]
name = "format-galaxy-web-host"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
js-sys = "0.3.40"
fg-index = { path = "../crates/fg-index" }
fg-plugin = { path = "../crates/fg-plugin" }
wasm-bindgen-futures = "0.4.18"
anyhow = "1.0"
yewtil = "0.3.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Selection",
  "Window",
  "Document",
  "console",
  "DomRect",
]
