[package]
name = "json-like-indent"
version = "0.1.0"
authors = ["Felix Kohlgrüber <felix.kohlgrueber@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "json_like_indent.rs"

[dependencies]
json-like-value = { path = "../value" }
format-galaxy-core = { path = "../../../core" }
wee_alloc = "0.4.5"
